--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,22 @@
 body{
-  font-size:10pt;
-  font-family:Verdana,Geneva,Arial,Helveticaa,sans-serif;
-  color:black;
-  line-height:14pt;
-  padding-left:5pt;
-  padding-right:5pt;
-  padding-top:5pt;
+  font-size:12pt;
+  font-family:Arial,sans-serif;
+  color:blue;
+  line_height:20pt;
 }
 h1{
-  font:14pt Verdana,Geneva,Arial,Helvetica,sans-serif;
+  font:20pt,Arial;
+  color:yellow;
   font-weight:bold;
-  line-height:20pt;
+  line-height:30pt;
 }
-p.subheader{
+p{
   font-weight:bold;
-  color:#593d87;
-}
-img{
-  padding:3pt;
-  float:right;
-}
-a{
-  text-decoration:none;
-}
-a:link,a:visited{
-  color:#8094d6;
-}
-a:hover,a:active{
-  color:#FF9933;
 }
 footer{
-  font_size:9pt;
+  font-szie:9pt;
   font-style:italic;
-  line-height：12pt;
+  line-height:12pt;
   text-align:center;
   padding-top:30pt;
 }
